gcp-infrastructure/ingress-config.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mbtq-ecosystem-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: mbtq-ecosystem-ip
    networking.gke.io/managed-certificates: deafauth-ssl,ecosystem-ssl
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  # DeafAUTH Universal Identity
  - host: deafauth.mbtq.dev
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: deafauth-api-service
            port:
              number: 80
  
  # 360magicians Vertex AI
  - host: 360magicians.com
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: magicians360-service
            port:
              number: 80
  
  # PinkSync Accessibility
  - host: pinksync.io
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: pinksync-service
            port:
              number: 80
  
  # MBTQ Platform
  - host: mbtq.dev
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: mbtq-platform-service
            port:
              number: 80
  
  # MBTQ Universe DAO
  - host: mbtquniverse.com
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: mbtquniverse-service
            port:
              number: 80
